--- a/seedqr/src/main/webapp/resources/css/seedqr.css
+++ b/seedqr/src/main/webapp/resources/css/seedqr.css
@@ -1,5 +1,7 @@
-body {
+html, body {
     font-family: Microsoft YaHei !important;
+    height: 0;
+    margin: 0;
 }
 
 .ui-widget, .ui-widget .ui-widget {
