--- a/seedqr/src/main/webapp/resources/css/seedqr.css
+++ b/seedqr/src/main/webapp/resources/css/seedqr.css
@@ -1,12 +1,8 @@
 html, body {
     font-family: Microsoft YaHei !important;
-    height: 0;
-    margin: 0;
-}
-
-.ui-widget, .ui-widget .ui-widget {
-    font-family: Microsoft YaHei !important;
     font-size: 90% !important;
+    height: 100%;
+    margin: 0;
 }
 
 .transparent tr, .transparent td {
