--- a/seedqr/src/main/webapp/resources/css/seedqr.css
+++ b/seedqr/src/main/webapp/resources/css/seedqr.css
@@ -13,6 +13,10 @@ html, body {
     border: none;
 }
 
+.ui-growl {
+    z-index: 999999 !important;
+}
+
 .submit {
     width: 100%;
     text-align: right;
